--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.inputs.clean-ghcr-texlive == 'true'
     steps:
-      - name: Delete 'dev' containers older than a week
+      - name: Delete 'untaged' containers
         uses: snok/container-retention-policy@v2
         with:
           image-names: overleaf/texlive
@@ -79,8 +79,7 @@ jobs:
           account-type: org
           org-name: ayaka-notes
           untagged-only: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
+          token: ${{ secrets.ORGTOKEN }}
           dry-run: true
 
   build-image:
