--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -74,12 +74,13 @@ jobs:
       - name: Delete 'untaged' containers
         uses: snok/container-retention-policy@v2
         with:
-          image-names: overleaf/texlive
+          image-names: overleaf
           cut-off: 1 min ago UTC
           account-type: org
           org-name: ayaka-notes
           untagged-only: true
-          token: ${{ secrets.ORGTOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          token-type: github-token
           dry-run: true
 
   build-image:
