--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -180,6 +180,7 @@ jobs:
   
   post-clean-ghcr-texlive:
     runs-on: ubuntu-latest
+    needs: [build-image, build-latest]
     if: github.event.inputs.clean-ghcr-texlive == 'true'
     steps:
       - name: Delete 'untaged' containers
