--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -9,7 +9,13 @@ on:
         required: true
         default: true
         type: boolean
-      
+
+      sort-ghcr-texlive:
+        description: "Sort ghcr.io texlive"
+        required: true
+        default: true
+        type: boolean
+
       build-latest:
         description: "Build latest(2023)"
         required: true
@@ -81,7 +87,6 @@ jobs:
           untagged-only: true
           token: ${{ secrets.ORGTOKEN }}
 
-
   build-image:
     runs-on: ubuntu-latest
     needs: clean-ghcr-texlive
@@ -91,22 +96,7 @@ jobs:
       max-parallel: 3
       matrix:
         # tex-version: [2022, 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010]
-        tex-version:
-          [
-            2010,
-            2011,
-            2012,
-            2013,
-            2014,
-            2015,
-            2016,
-            2017,
-            2018,
-            2019,
-            2020,
-            2021,
-            2022,
-          ]
+        tex-version: [2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022]
     name: TeXLive ${{ matrix.tex-version }}
     steps:
       - name: "Checkout GitHub Action"
@@ -177,7 +167,7 @@ jobs:
           file: ./texlive/Dockerfile.latest
           push: true
           tags: ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:2023,  ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-  
+
   post-clean-ghcr-texlive:
     runs-on: ubuntu-latest
     needs: [build-image, build-latest]
@@ -192,3 +182,26 @@ jobs:
           org-name: ayaka-notes
           untagged-only: true
           token: ${{ secrets.ORGTOKEN }}
+
+  reorder-ghcr:
+    runs-on: ubuntu-latest
+    needs: [build-image, build-latest]
+    if: github.event.inputs.sort-ghcr-texlive == 'true'
+    matrix:
+      max-parallel: 1
+      tex-version: [2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, latest]
+    steps:
+      - name: "Checkout GitHub Action"
+        uses: actions/checkout@main
+
+      - name: "Login to GitHub Container Registry"
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ${{env.DOCKER_REGISTRY}}
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+
+      - name: Pull and push Docker image
+        run: |
+          docker pull ghcr.io/ayaka-notes/overleaf/texlive:${{ matrix.tex-version }}
+          docker push ghcr.io/ayaka-notes/overleaf/texlive:${{ matrix.tex-version }}
