--- a/.github/workflows/texlive.yml
+++ b/.github/workflows/texlive.yml
@@ -187,9 +187,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-image, build-latest]
     if: github.event.inputs.sort-ghcr-texlive == 'true'
-    matrix:
+    strategy:
+      fail-fast: false
       max-parallel: 1
-      tex-version: [2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, latest]
+      matrix:
+        tex-version: [2010, 2011, 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022, 2023, latest]
     steps:
       - name: "Checkout GitHub Action"
         uses: actions/checkout@main
