--- a/.github/workflows/overleaf.yml
+++ b/.github/workflows/overleaf.yml
@@ -28,6 +28,8 @@ jobs:
           cd ./overleaf && ./run.sh && cd ..
           cp ./patches/nginx-learn-config/* ./overleaf
           cd ./overleaf && ./run.sh && cd ..
+          cp ./patches/short-key-title/* ./overleaf
+          cd ./overleaf && ./run.sh && cd ..
       - name: "Make CE Docker Image"
         run: |
           cd ./overleaf/server-ce && make
