更新GitHub Actions工作流程文件，添加清理未标记的容器步骤

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -42,3 +42,16 @@ jobs:
         run: |
           docker tag develop-${{matrix.image-name}} ${{env.GHCR_REGISTRY}}/ayaka-notes/overleaf/dev/${{matrix.image-name}}:latest
           docker push ${{env.GHCR_REGISTRY}}/ayaka-notes/overleaf/dev/${{matrix.image-name}}:latest
+  clean-image:
+    runs-on: ubuntu-latest
+    needs: build-image
+    steps:
+      - name: Delete 'untaged' containers
+        uses: snok/container-retention-policy@v2
+        with:
+          image-names: overleaf/dev/*
+          cut-off: 1 min ago UTC
+          account-type: org
+          org-name: ayaka-notes
+          untagged-only: true
+          token: ${{ secrets.ORGTOKEN }}      
