--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -27,6 +27,8 @@ jobs:
             clsi,
           ]
     steps:
+      - name: "Check out code"
+        uses: actions/checkout@main
       - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3.0.0
         with:
