添加拼写检查服务配置文件

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -25,6 +25,7 @@ jobs:
             contacts,
             chat,
             clsi,
+            spelling
           ]
     steps:
       - name: "Check out code"
