--- a/.github/workflows/overleaf.yml
+++ b/.github/workflows/overleaf.yml
@@ -30,6 +30,8 @@ jobs:
           cd ./overleaf && ./run.sh && cd ..
           cp ./patches/short-key-title/* ./overleaf
           cd ./overleaf && ./run.sh && cd ..
+          cp ./patches/more-theme/* ./overleaf
+          cd ./overleaf && ./run.sh && rm -rf ./run.sh && cd ..
       - name: "Make CE Docker Image"
         run: |
           cd ./overleaf/server-ce && make
