--- a/.github/workflows/overleaf.yml
+++ b/.github/workflows/overleaf.yml
@@ -32,6 +32,8 @@ jobs:
           cd ./overleaf && ./run.sh && cd ..
           cp -r ./patches/symbol-palette/* ./overleaf
           cd ./overleaf && ./run.sh && cd ..
+          cp -r ./patches/track-change/* ./overleaf
+          cd ./overleaf && ./run.sh && cd ..
           cp ./patches/more-theme/* ./overleaf
           cd ./overleaf && ./run.sh && rm -rf ./run.sh && cd ..
       - name: "Make CE Docker Image"
