--- a/texlive/Dockerfile.old
+++ b/texlive/Dockerfile.old
@@ -9,7 +9,7 @@ LABEL \
 # 安装依赖
 RUN apt-get update && apt-get install -y --no-install-recommends \
     fontconfig inkscape pandoc python3-pygments wget python3 \
-    gnupg gnuplot perl-modules perl ca-certificates git
+    gnupg gnuplot perl-modules perl ca-certificates git ghostscript
 
 # 参数-年份
 ARG TEXLIVE_Version=2014
