--- a/.github/workflows/overleaf.yml
+++ b/.github/workflows/overleaf.yml
@@ -39,12 +39,12 @@ jobs:
           cd ./overleaf && ./run.sh && cd ..
           cp -r ./patches/track-change/* ./overleaf
           cd ./overleaf && ./run.sh && cd ..
-          cp -r ./patches/references/* ./overleaf
-          cd ./overleaf && ./run.sh && cd ..
+          # cp -r ./patches/references/* ./overleaf
+          # cd ./overleaf && ./run.sh && cd ..
           cp ./patches/more-theme/* ./overleaf
           cd ./overleaf && ./run.sh && rm -rf ./run.sh && cd ..
-          cd ./overleaf && rm -rf ./package-lock.json && npm install --package-lock-only --ignore-scripts
-          echo ./package-lock.json
+          # cd ./overleaf && rm -rf ./package-lock.json && npm install --package-lock-only --ignore-scripts
+          # echo ./package-lock.json
       - name: "Make CE Docker Image"
         run: |
           cd ./overleaf/server-ce && make
