--- a/.github/workflows/overleaf.yml
+++ b/.github/workflows/overleaf.yml
@@ -15,19 +15,10 @@ jobs:
         uses: actions/checkout@main
       - name: "Clone Overleaf"
         run: |
-          git clone https://github.com/overleaf/overleaf ./overleaf
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: overleaf/package-lock.json
-      - name: "Patch Files"
-        run: |
-          ./patch.sh
+          git clone https://${{secrets.ORGTOKEN}}@github.com/ayaka-notes/overleaf-internal ./overleaf
       - name: "Make CE Docker Image"
         run: |
           cd ./overleaf/server-ce && make
-
       - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3.0.0
         with:
