Add  r-base-core to TeXLive

--- a/texlive/Dockerfile
+++ b/texlive/Dockerfile
@@ -14,7 +14,7 @@ ARG TEXLIVE_MIRROR=http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/${T
 RUN apt-get update && apt-get install -y --no-install-recommends \
     fontconfig inkscape pandoc python3-pygments wget python3 \
     gnupg gnuplot perl-modules perl ca-certificates git ghostscript \
-    qpdf
+    qpdf r-base-core
 
 
 # 感谢Overleaf的Dockerfile
