--- a/texlive/Dockerfile.old
+++ b/texlive/Dockerfile.old
@@ -10,7 +10,7 @@ LABEL \
 RUN apt-get update && apt-get install -y --no-install-recommends \
     fontconfig inkscape pandoc python3-pygments wget python3 \
     gnupg gnuplot perl-modules perl ca-certificates git ghostscript \
-    qpdf
+    qpdf r-base-core
 
 # 参数-年份
 ARG TEXLIVE_Version=2014
