--- a/texlive/Dockerfile.old
+++ b/texlive/Dockerfile.old
@@ -6,18 +6,28 @@ LABEL \
     org.opencontainers.image.source="https://github.com/ayaka-notes/overleaf" \
     org.opencontainers.image.licenses="MIT"
 
-# 安装依赖
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    fontconfig inkscape pandoc python3-pygments wget python3 \
-    gnupg gnuplot perl-modules perl ca-certificates git ghostscript \
-    qpdf r-base-core
-
 # 参数-年份
 ARG TEXLIVE_Version=2014
 
 # 这里必须用http或者ftp，因为https在perl中会被认为不匹配
 ARG TEXLIVE_MIRROR=http://ftp.math.utah.edu/pub/tex/historic/systems/texlive/${TEXLIVE_Version}/tlnet-final
 # ftp://tug.org/historic/systems/texlive/${TEXLIVE_Version}/tlnet-final
+
+
+# 拷贝LatexMk文件到/usr/local/share/latexmk/LatexMk
+COPY LatexMk /usr/local/share/latexmk/LatexMk
+COPY patchSynctex.R /usr/local/bin/
+COPY run-chktex.sh /usr/local/bin/
+
+# 设置权限
+RUN chmod 777 -R /usr/local/bin/ && \
+    chmod 777 -R /usr/local/share/latexmk/
+
+# 安装依赖
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    fontconfig inkscape pandoc python3-pygments wget python3 \
+    gnupg gnuplot perl-modules perl ca-certificates git ghostscript \
+    qpdf r-base-core
 
 # 感谢Overleaf的Dockerfile
 # 安装 texlive
