--- a/texlive/Dockerfile.old
+++ b/texlive/Dockerfile.old
@@ -30,12 +30,18 @@ RUN chmod 777 -R /usr/local/bin/ && \
 RUN apt-get update && apt-get install -y --no-install-recommends \
     fontconfig inkscape pandoc python3-pygments wget python3 \
     gnupg gnuplot perl-modules perl ca-certificates git ghostscript \
-    qpdf r-base-core
+    qpdf r-base-core tar
 
-# 安装字体
+# 安装字体 包含Google fonts
 RUN echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | debconf-set-selections \
 && apt-get update && apt-get install -y ttf-mscorefonts-installer \
-&& apt update && apt search ^fonts | grep -o '^fonts[^/]*' | xargs apt install -y
+&& apt update && apt search ^fonts | grep -o '^fonts[^/]*' | xargs apt install -y \
+&& wget https://github.com/google/fonts/archive/main.tar.gz -O gf.tar.gz \
+&& tar -xf gf.tar.gz \
+&& mkdir -p /usr/share/fonts/truetype/google-fonts \
+&& find $PWD/fonts-main/ -name "*.ttf" -exec install -m644 {} /usr/share/fonts/truetype/google-fonts/ \; || return 1 \
+&& rm -f gf.tar.gz \
+&& fc-cache -f && rm -rf /var/cache/*
 
 # 感谢Overleaf的Dockerfile
 # 安装 texlive
