Fix overleaf rebranding

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - redis
     stop_grace_period: 60s
     volumes:
-      - ./data/sharelatex_data:/var/lib/sharelatex
+      - ./data/sharelatex_data:/var/lib/overleaf
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       OVERLEAF_APP_NAME: Overleaf(Pro) Ayaka-notes Edition
@@ -42,7 +42,7 @@ services:
 
       # temporary fix for LuaLaTex compiles
       # see https://github.com/overleaf/overleaf/issues/695
-      TEXMFVAR: /var/lib/sharelatex/tmp/texmf-var
+      TEXMFVAR: /var/lib/overleaf/tmp/texmf-var
 
       ## Set for SSL via nginx-proxy
       #VIRTUAL_HOST: 103.112.212.22
