--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           token: ${{secrets.ORGTOKEN}}
           commit-message: Merge Upstream Code
-          branch: dev
+          branch: main
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
           title: 'Merge Overleaf Upstream Code'
