--- a/.github/workflows/merge_upstream.yml
+++ b/.github/workflows/merge_upstream.yml
@@ -27,6 +27,7 @@ jobs:
           token: ${{secrets.ORGTOKEN}}
           commit-message: Merge Upstream Code
           branch: main
+          base: dev
           committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           author: ${{ github.actor }} <${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com>
           title: 'Merge Overleaf Upstream Code'
