--- a/.github/workflows/quay_sync_test.yml
+++ b/.github/workflows/quay_sync_test.yml
@@ -19,9 +19,15 @@ jobs:
       - name: "Sync Docker Image"
         run: |
           skopeo login -u ayaka -p ${{ secrets.QUAY_IO_TOKEN }} quay.io
-          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2020.1 docker://quay.io/ayaka/texlive:2020.1
-          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2021.1 docker://quay.io/ayaka/texlive:2021.1
-          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2022.1 docker://quay.io/ayaka/texlive:2022.1
-          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2023.1 docker://quay.io/ayaka/texlive:2023.1
-          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:latest docker://quay.io/ayaka/texlive:latest
+          skopeo login -u musicminion -p ${{ secrets.ALIYUN_DOCKER_TOKEN }} registry.cn-hongkong.aliyuncs.com
+          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2020.1 docker://registry.cn-hongkong.aliyuncs.com/ayaka-notes/texlive:2020.1
+          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2021.1 docker://registry.cn-hongkong.aliyuncs.com/ayaka-notes/texlive:2021.1
+          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2022.1 docker://registry.cn-hongkong.aliyuncs.com/ayaka-notes/texlive:2022.1
+          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2023.1 docker://registry.cn-hongkong.aliyuncs.com/ayaka-notes/texlive:2023.1
+          skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:latest docker://registry.cn-hongkong.aliyuncs.com/ayaka-notes/texlive:latest
+          # skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2020.1 docker://quay.io/ayaka/texlive:2020.1
+          # skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2021.1 docker://quay.io/ayaka/texlive:2021.1
+          # skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2022.1 docker://quay.io/ayaka/texlive:2022.1
+          # skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:2023.1 docker://quay.io/ayaka/texlive:2023.1
+          # skopeo copy docker://ghcr.io/ayaka-notes/overleaf/texlive:latest docker://quay.io/ayaka/texlive:latest
           
